Prevent text wrap, only wrap text for lyrics

--- a/jukebox/static/style.css
+++ b/jukebox/static/style.css
@@ -9,6 +9,8 @@ body {
 .content {
   display: flex;
   height: calc(100vh - 64px);
+  text-wrap-mode: nowrap;
+  text-overflow: ellipsis;
 }
 
 .sidebar-left,
@@ -124,6 +126,7 @@ body {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  text-wrap-mode: wrap;
   gap: 1.5em;
   line-height: 1.2em;
   font-size: 1em;
